<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Crossword</string>
    <string name="exception_file_not_found">Le fichier n\'a pas put être trouvé</string>
    <string name="exception_grid_not_found">La grille n\'a pas put être trouvée</string>
    <string name="exception_sav_not_found">Aucune sauvegarde pour cette grille</string>
    <string name="exception_unknow">Unknow error occurs</string>
    <string name="exception_network">Connexion impossible, vérifiez votre accès à internet</string>
    <string name="dialog_display_correction">Êtes vous sure d\'afficher la correction ?</string>
    <string name="yes">oui</string>
    <string name="clear">vider</string>
    <string name="no">non</string>
    <string name="display">afficher</string>
    <string name="list">Liste</string>
    <string name="category">Categorie</string>
    <string name="search">Recherche</string>
    <string name="author_format">Auteur: %s</string>
    <string name="level_format">Difficulté: %d</string>
    <string name="button_last">Reprendre la\ndernière grille</string>
    <string name="button_list">Liste des\ngrilles</string>
    <string name="button_category">Grilles par\ncatégorie</string>
    <string name="button_search">Rechercher\nun mot</string>
    <string name="percent">Pourcentage</string>
    <string name="save_dialog_title">Enregistrement</string>
    <string name="save_dialog_content">Enregistrement de la grille</string>
    <string name="today">"Aujourd\'hui"</string>
    <string name="one_day_ago">Moins d\'une semaine</string>
    <string name="one_week_ago">Plus une semaine</string>
    <string name="one_month_ago">Plus d\'un mois</string>
    <string name="one_year_ago">Plus d\'un an</string>
    <string name="menu_solution">Révéler toute la grille</string>
    <string name="menu_settings">Préférences</string>
    <string name="menu_refresh">Actualiser</string>
    <string name="menu_information">Information</string>
    <string name="notification_check_grids">Vérifie la présence de nouvelles grilles...</string>
    <string name="notification_update_grids">Téléchargements des nouvelles grilles...</string>
    <string name="notification_update_grids_complete">Téléchargments terminés</string>
    <string name="notification_update_grids_status" formatted="false">Grille %d sur %d</string>
    <string name="grid_list_up_to_date">Pas de nouvelles grilles</string>
    <string name="grid_list_new">%d nouvelles grilles</string>
    <string name="grid_list_is_empty">Aucune grille enregistrée</string>
    <string name="feedback_send_success">Message envoyé</string>
    <string name="feedback_send_fail">Impossible d\'envoyer le message</string>
    <string name="feedback_send">Envoyer</string>
    <string name="feedback_sending">Envoi du message...</string>
    <string name="feedback_text">Si vous avez des idées ou si vous rencontrez des problèmes vous pouvez me les faires remonter via cette page, ou sur le GitHub du projet: https://github.com/Isshun/Crossword\n\n
Les fonctionnalitées à venirs sont:\n
- Déplacement / zoom de la grille\n
- Possiblité de switcher en mode paysage\n
- Meilleur support des tablets\n</string>
    <string name="preferences_clear_cache_warning">Les sauvegardes seront supprimées, continuer ?</string>
    <string name="preferences_clear_cache_toast">Suppression des grilles...</string>
    <string name="preferences_clear_cache_title">Vider le cache</string>
    <string name="preferences_clear_cache_summary">Attention: Les sauvegardes seront supprimées</string>
    <string name="preferences_feedback_summary">Donnez votre avis sur l\'application ou signaler une erreur</string>
    <string name="preferences_solid_selection_title">Selection persistante</string>
    <string name="preferences_solid_selection_summary">Toucher les cases noire n\'efface pas la sélection</string>
    <string name="preferences_grid_is_lower_title">Grille en minuscule</string>
    <string name="preferences_check_summary">Les lettres fausses apparaissent en rouge</string>
    <string name="preferences_check_title">Correction pas à pas</string>
    <string name="preferences_feedback_title">Feedback</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_history_review">往期回顾</string>
    <string name="no_current_socre">暂无积分</string>
    <string name="next_vol_text">下一期</string>
    <string name="button_history">往期回顾</string>
    <string name="button_live">直播互动</string>
    <string name="button_breakthough">闯关模式</string>
    <string name="button_rank">积分排名</string>

    <string name="title_activity_register">RegisterActivity</string>

    <string name="gridlist_review">第1期</string>


    <!-- 登录或注册这块的字 -->
    <string name="register">注  册</string>
    <string name="submit">提  交</string>
    <string name="login">登  录</string>
    <string name="tourist_login">游客登录</string>
    <string name="account_input_hint">请输入用户名</string>
    <string name="telephone_input_hint">请输入手机号</string>
    <string name="password_input_hint">请输入密码</string>
    <string name="account">账户</string>
    <string name="telephone">手机</string>
    <string name="password">密码</string>
    <string name="login_now"><u>已有帐号,马上登录</u></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="register_now">现在注册</string>
    <string name="individual_center">个人中心</string>
    <string name="rank_list">排行榜</string>
    <string name="rank">排名</string>
    <string name="username">用户名</string>
    <string name="accumulate_point">积分</string>
   
    
    
    
    <!-- 选择类别的一些文字 -->
     <string name="choose_category">选择类别</string>
     <string name="movie">电影知识</string>
     <string name="verses">诗词歌赋</string>
     <string name="pop">流行歌曲</string>
     <string name="random">随机模式</string>
     <string name ="category_finished">已完成：20/100</string>
</resources>