<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_check"
        android:icon="@drawable/ic_menu_check"
        android:title="@string/preferences_check_title"/>

    <item
        android:id="@+id/menu_solve"
        android:icon="@drawable/ic_menu_solve"
        android:title="@string/menu_solution"/>

    <item
        android:id="@+id/menu_grid"
        android:icon="@drawable/ic_menu_grid"
        android:title="@string/menu_information"/>

    <item
        android:id="@+id/menu_feedback"
        android:icon="@drawable/ic_menu_notifications"
        android:title="@string/preferences_feedback_title"/>

    <item
        android:id="@+id/menu_main_preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings"/>

</menu>