<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:background="@color/background_gray">
 <RelativeLayout android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@color/title_background_color">
      <ImageButton android:id="@+id/register_return_button"
          android:src="@drawable/navigationbar_backbutton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingLeft="@dimen/title_padding_left"
          android:paddingTop="@dimen/title_padding_top"
          android:paddingBottom="@dimen/title_padding_bottom"
          android:background="@null"/>
         <TextView
        android:id="@+id/title_register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/register"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/text_black" />
     
     
</RelativeLayout>
    <ImageView android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/title_bottom_line_tile"/>
    
    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/input">
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="@dimen/account_text_size"
            android:paddingLeft="@dimen/input_title_padding_left"
            android:textColor="@color/account_text_color"
            android:layout_gravity="center_vertical"/>
        <EditText android:id="@+id/register_account_input_edittext"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textColorHint="@color/input_hint_text_color"
            android:textSize="@dimen/input_hint_text_color"
            android:paddingLeft="@dimen/input_hint_padding_left"
            android:hint="@string/account_input_hint"
            android:background="@null"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    
    
    
    
    
    
    
    
        <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dip"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/input">
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephone"
            android:textSize="@dimen/telephone_text_size"
            android:paddingLeft="@dimen/input_title_padding_left"
            android:textColor="@color/telephone_text_color"
            android:layout_gravity="center_vertical"/>
        <EditText android:id="@+id/telephone_input_edittext"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textColorHint="@color/input_hint_text_color"
            android:textSize="@dimen/input_hint_text_color"
            android:paddingLeft="@dimen/input_hint_padding_left"
            android:hint="@string/telephone_input_hint"
            android:background="@null"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    
        
        
        
        
     <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dip"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/input">
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/password_text_size"
            android:paddingLeft="@dimen/input_title_padding_left"
            android:textColor="@color/password_text_color"
            android:layout_gravity="center_vertical"/>
        <EditText android:id="@+id/register_password_input_edittext"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textColorHint="@color/input_hint_text_color"
            android:textSize="@dimen/input_hint_text_color"
            android:paddingLeft="@dimen/input_hint_padding_left"
            android:hint="@string/password_input_hint"
            android:background="@null"
            android:layout_gravity="center_vertical"
            android:password="true"/>
    </LinearLayout>
        
        
        <Button android:id="@+id/register_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button"
            android:layout_marginTop="45dip"
            android:text="@string/submit"
            android:textSize="@dimen/register_or_login_text_size"
            android:textColor="@color/register_or_login_text_color"
            android:layout_gravity="center_horizontal"/>
      
      
      <TextView android:id="@+id/login_now_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/login_now_text_color"
          android:textSize="@dimen/login_now_text_size"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="40dip"
          />
     
</LinearLayout>
