<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:baselineAligned="false" >

        <FrameLayout
            android:id="@+id/frameLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button_last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#a000"
                android:drawableTop="@drawable/icon_crossword"
                android:padding="7dp"
                android:text="@string/button_last"
                android:textColor="#fff" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#a000"
                android:drawableTop="@drawable/icon_list"
                android:padding="7dp"
                android:text="@string/button_list"
                android:textColor="#fff" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.5"
        android:baselineAligned="false" >

        <FrameLayout
            android:id="@+id/frameLayout3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#a000"
                android:drawableTop="@drawable/icon_category"
                android:padding="7dp"
                android:text="@string/button_category"
                android:textColor="#fff" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#a000"
                android:drawableTop="@drawable/icon_search"
                android:padding="7dp"
                android:text="@string/button_search"
                android:textColor="#fff" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>